--- a/_includes/card.html
+++ b/_includes/card.html
@@ -5,6 +5,14 @@
     margin-top: 50px;
     margin-bottom: 70px;
   } 
+  @media screen and (max-width: 480px) {
+    .post-card{
+    width: 90%;
+    margin-left: 17px;
+    margin-top: 30px;
+    margin-bottom: 70px;
+  } 
+}
 </style>
 <div class="post-card" itemprop="blogPosts" itemscope="" itemtype="http://schema.org/BlogPosting">
   
